css/main.css
dl {
  margin-top: 1.5em;
}

dt {
  background: rgba(0, 0, 0, 0.1);
  color: rgba(0, 0, 0, 0.68);
  float: left;
  margin-right: 10px;
  padding: 5px;
  width: 130px;
}

dd {
  margin: 2px 0;
  padding: 5px 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.box p {
  font-size: 0.8rem;
}

.box h3 {
  margin: 1rem 0 0.5rem 0;
}

.box > :nth-child(2) {
  font-size: 1rem;
  font-weight: 600;
  margin: 0.5rem 0;
  min-height: 1.5rem;
}

.box > :nth-child(2):empty {
  background: no-repeat center/20% url('../images/rolling_block.gif');
}

a {
  color: #286cdb;
}

.content p.with-icon {
  margin-bottom: 0;
}

p.with-icon img {
  height: 1em;
  margin-top: 10px;
  width: auto;
  position: relative;
  top: 2px;
}

p.actions {
  cursor: pointer;
  font-size: 2rem;
  margin-bottom: -2rem;
  padding: 0 1.5rem 0 0;
  text-align: right;
}

span.discrete {
  color: #333;
  font-size: 0.8rem;
}

@media (prefers-color-scheme: dark) {
  body {
    filter: invert(1);
  }
}

